<resources>
    <string name="app_name">Nmedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="post_author_avatar" translatable="false">Post author avatar</string>
    <string name="post_menu" translatable="false">Post menu</string>
    <string name="numberOfLikes" translatable="false">10</string>
    <string name="numberOfShared" translatable="false">1099</string>
    <string name="numberOfOverlooked" translatable="false">8k</string>
    <string name="author" translatable="false">Нетология. Университет интернет - профессий будущего</string>
    <string name="published" translatable="false">30 мая в 21:00</string>
    <string name="content" translatable="false">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов.Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен - http://netolo.gy/fyb</string>
    <string name="edit_post" translatable="false">Редактировать</string>
    <string name="remove_post" translatable="false">Удалить</string>
    <string name="chooser_share_post" translatable="false">Поделиться постом</string>
    <string name="publish_text" translatable="false">Опубликовать пост</string>
    <string name="app_not_found_error" translatable="false">App not found</string>
</resources>