<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/avatarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/post_author_avatar"
        app:srcCompat="@drawable/post_avatar_drawable"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/barrierTop"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/authorView"
        app:layout_constraintStart_toEndOf="@id/avatarView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/publishedView"
        app:layout_constraintEnd_toStartOf="@id/menuPostView"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:singleLine="true"
        android:ellipsize="end"
        android:text="@string/author" />

    <TextView
        android:id="@+id/publishedView"
        app:layout_constraintStart_toEndOf="@id/avatarView"
        app:layout_constraintTop_toBottomOf="@id/authorView"
        app:layout_constraintBottom_toBottomOf="@id/barrierTop"
        app:layout_constraintEnd_toStartOf="@id/menuPostView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menuPostView"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="36dp"
        android:layout_height="43dp"
        android:contentDescription="@string/post_menu"
        app:icon="@drawable/menu"
        app:iconTint="@color/ic_menu_tint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="authorView, publishedView, avatarView"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="80dp" />

    <TextView
        android:id="@+id/contentView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/content"
        app:layout_constraintTop_toBottomOf="@id/barrierTop"
        app:layout_constraintBottom_toTopOf="@id/barrierBottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:autoLink="web"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="contentView"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="279dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/likes"
        style="@style/OurButtons"
        android:checkable="true"
        android:textColor="@color/purple_500"
        app:icon="@drawable/ic_like_selector"
        app:iconTint="@color/ic_like_tint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        tools:text="100" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shared"
        style="@style/OurButtons"
        app:icon="@drawable/shared"
        app:iconTint="@color/ic_shared_tint"
        app:layout_constraintStart_toEndOf="@id/likes"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        tools:text="100" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/overlooked"
        style="@style/OurButtons"
        app:icon="@drawable/overlooked_post"
        app:iconTint="@color/colorOverlooked"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="100"/>

</androidx.constraintlayout.widget.ConstraintLayout>