<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/post_author_avatar"
        tools:srcCompat="@sample/posts.json/data/authorAvatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/barrierTop"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/author"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:singleLine="true"
        android:ellipsize="end"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        app:layout_constraintBottom_toBottomOf="@id/barrierTop"
        app:layout_constraintEnd_toStartOf="@id/menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        tools:text="@sample/posts.json/data/published" />

    <ImageButton
        android:id="@+id/menu"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/post_menu"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/menu" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="author, published, avatar"/>

    <TextView
        android:id="@+id/contentView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@sample/posts.json/data/content"
        app:layout_constraintTop_toBottomOf="@id/barrierTop"
        app:layout_constraintBottom_toTopOf="@id/barrierBottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:autoLink="web"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="contentView" />

    <ImageButton
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        android:layout_marginTop="16dp"
        app:srcCompat = "@drawable/likes"/>

    <TextView
        android:id="@+id/numberOfLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="1dp"
        android:text="@string/numberOfLikes"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/likes"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom" />

    <ImageButton
        android:id="@+id/shared"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toEndOf="@id/numberOfLikes"
        app:srcCompat = "@drawable/shared"/>

    <TextView
        android:id="@+id/numberOfShared"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:text="@string/numberOfShared"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/shared"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom" />

    <ImageView
        android:id="@+id/overlooked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat = "@drawable/overlooked_post"/>

    <TextView
        android:id="@+id/numberOfOverlooked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/numberOfOverlooked"
        android:textColor="@color/black"
        android:layout_marginStart="1dp"
        app:layout_constraintStart_toEndOf="@id/overlooked"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom" />


</androidx.constraintlayout.widget.ConstraintLayout>